[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fastapy"
authors = [
    {name = "Andrzej Zielezinski", email = "a.zielezinski@gmail.com"},
    {name = "Maciej Michalczyk", email = "mccv99@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["FASTA", "sequence", "record", "parser"]
requires-python = ">=3.8"
dynamic = ["version", "description"]

[tool.flit.module]
name = "fastapy"

[project.urls]
Documentation = "https://github.com/aziele/fastapy"
Source = "https://github.com/aziele/fastapy"
