[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapy"
description = "A lightweight Python module to read and write FASTA sequence records"
authors = [
    {name = "Andrzej Zielezinski", email = "a.zielezinski@gmail.com"},
    {name = "Maciej Michalczyk", email = "mccv99@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["FASTA", "sequence", "record", "parser"]
requires-python = ">=3.8"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "fastapy.__version__"}

[project.urls]
Documentation = "https://github.com/aziele/fastapy"
Source = "https://github.com/aziele/fastapy"
